tests/paczka1/small_fuzzy/43633165.err
Error in line 5: S343 S343 23,4
Error in line 12: S343 A716 95,6
